--- a/ExploreSpace/space.css
+++ b/ExploreSpace/space.css
@@ -1,6 +1,6 @@
 body {
-    margin: 0;
-    color: D0C6A1;
+    margin: 0; 
+    color: D0C6A1 ;
     text-align: center;
     font-family: "Orbitron", sans-serif;
 }
@@ -27,4 +27,11 @@ body {
     height: 70px;
     background-image: none;
     
+}
+h1 {
+    text-shadow: 0px 0px 4px black;
+} 
+
+#terms {
+    color: #272525fa;
 }
