--- a/EnteringPeopleCount/style.css
+++ b/EnteringPeopleCount/style.css
@@ -16,14 +16,30 @@ h2 {
 }
  button {
     border: none;
-    background-color: darkred;
     padding: 8px 50px;
     font-weight: bold;
     color: white;
-    width: 200px;
+    width: 250px;
     border-radius: 5px;
+    margin: 10px 30px;
  }
+ #increment-btn {
+    background-color: darkred;
+ }
+ #save-btn {
+    background-color: green
+ }
+#entries-log {
+   font-weight: bold;
+   font-size: 15px;
+   padding: 10px;
+   background-color: whitesmoke;
+   border-radius: 7px;
+}
 
- button:hover {
+ #increment-btn:hover {
     background-color: brown;
  }
+  #save-btn:hover {
+    background-color: #13b413b7;
+ }  
